[metadata]
name = pyproperties-jaribou
version = 0.0.1
author = JariBou
author_email = bourdietome@gmail.com
description = An adaptation of java properties loader for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JariBou/PyProperties
project_urls =
    Bug Tracker = https://github.com/JariBou/PyProperties/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src